src/objects/HQ_Admin_Report_CSV_Files__c.object
<CustomObject>
    <description>Custom objects store facets from POST request. It is used for CSV Export in HQ Admin Reports. We want store Facet to avoid issues with JSON in GET parameters and issue with too long URL.</description>
    <fields>
        <fullName>Domain_Name__c</fullName>
        <label>Domain Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Facet_Filters_JSON__c</fullName>
        <label>Facet Filters JSON</label>
        <length>65536</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Order_Direction__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Order Direction</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Order_Field__c</fullName>
        <label>Order Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>HQ Admin Report CSV File</label>
    <nameField>
        <label>HQ Admin Report CSV Download Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>HQ Admin Report CSV Files</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>